# FibrilSite

./: README.md  fibril_grooves_extractor.ipynb  pyproject.toml  setup.py
example/2025-04-08_6cu7_Pol_1a_P1/: 2025-04-08_6cu7_ABCDEFGHIJ_Pol_1a_P1_params.txt  2025-04-08_6cu7_Pol_1a_P1_pocket_after_expansion.csv  2025-04-08_6cu7_mapped_coords_surf_and_atomic.csv  2025-04-08_6cu7_masif_params_from_ply.csv  Pol_1a_P1_convex_hull.ply
example/WT-aSyn_6cu7_Pol_1a_P1/: 6cu7_Pol_1a_P1_coords.csv  Pol_1a_P1_pocket_surface.xyz  fibril_grooves_extractor_Pol_1a_P1.ipynb  pocket_coods.xyz  side_surface_points.xyz
example_site/: README.md
example_site/2025-04-08_6cu7_Pol_1a_P1/: 2025-04-08_6cu7_Pol_1a_P1_isolate.csv  2025-04-08_6cu7_Pol_1a_P1_refined.csv  2025-04-08_6cu7_fibril_side_surface_points.csv  2025-04-08_Pol_1a_P1_params.csv  2025-04-08_isolated_pocket.xyz  2025-04-08_major_eigenvector.xyz  2025-04-08_pocket_expanded_for_mesh.csv
examples/2022-10-07_6cu7_Pol_1a_P1/: 2022-10-07_6cu7_ABCDEFGHIJ_Pol_1a_P1_params.txt  2022-10-07_6cu7_Pol_1a_P1_pocket_after_expansion.csv  2022-10-07_6cu7_fibril_side_surface_points.csv  2022-10-07_6cu7_mapped_coords_surf_and_atomic.csv  2022-10-07_6cu7_masif_params_from_ply.csv  2022-10-07_extended_pocket_surf.xyz  2022-10-07_refined_pocket_mod.xyz  (+2 more)
fibrilsite_package/: README.md  pyproject.toml
site_alignment/: 230906_maif_desc_and_input_feats_mapper.ipynb  README.md  fibril_site_input_feats_mapper.ipynb  fibril_site_registeration.py  run_fibril_site_registeration.sh
site_alignment_analysis/: README.md  site_alignment_analysis.ipynb
(+13 files in other folders)
